--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,4 +8,5 @@
 @import "modules/chat";
 @import "modules/user";
 @import "messages/messages.scss";
+@import "modules/group";
 @import "modules/flash";
