--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -18,34 +18,34 @@
       .right-header
         .right-header__button
           Edit
-    -# .messages
-    -#   .message
-    -#     .upper-message
-    -#       .upper-message__user-name
-    -#         メンバー
-    -#       .upper-message__date
-    -#         2017/04/04
-    -#     .lower-meesage
-    -#       .lower-message__content
-    -#         メッセージ
-    -#   .message
-    -#     .upper-message
-    -#       .upper-message__user-name
-    -#         メンバー
-    -#       .upper-message__date
-    -#         2017/04/04
-    -#     .lower-meesage
-    -#       .lower-message__content
-    -#         メッセージ
-    -#   .message
-    -#     .upper-message
-    -#       .upper-message__user-name
-    -#         メンバー
-    -#       .upper-message__date
-    -#         2017/04/04
-    -#     .lower-meesage
-    -#       .lower-message__content
-    -#         メッセージ
+    .messages
+      .message
+        .upper-message
+          .upper-message__user-name
+            メンバー
+          .upper-message__date
+            2017/04/04
+        .lower-meesage
+          .lower-message__content
+            メッセージ
+      .message
+        .upper-message
+          .upper-message__user-name
+            メンバー
+          .upper-message__date
+            2017/04/04
+        .lower-meesage
+          .lower-message__content
+            メッセージ
+      .message
+        .upper-message
+          .upper-message__user-name
+            メンバー
+          .upper-message__date
+            2017/04/04
+        .lower-meesage
+          .lower-message__content
+            メッセージ
     .messages
       = render @messages
     .form
