--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,46 +6,48 @@
     .header
       .left-header
         .left-header__title
-          グループ名
+          = @group.name
         %ul.left-header__members
           Member：
-          %li.member
-            メンバー名
-          %li.member
-            メンバー名
-          %li.member
-            メンバー名
+          - @group.users.each do |user|
+            = user.name
+          -# %li.member
+          -#   メンバー名
+          -# %li.member
+          -#   メンバー名
+          -# %li.member
+          -#   メンバー名
       .right-header
         .right-header__button
-          Edit
-    .messages
-      .message
-        .upper-message
-          .upper-message__user-name
-            メンバー
-          .upper-message__date
-            2017/04/04
-        .lower-meesage
-          .lower-message__content
-            メッセージ
-      .message
-        .upper-message
-          .upper-message__user-name
-            メンバー
-          .upper-message__date
-            2017/04/04
-        .lower-meesage
-          .lower-message__content
-            メッセージ
-      .message
-        .upper-message
-          .upper-message__user-name
-            メンバー
-          .upper-message__date
-            2017/04/04
-        .lower-meesage
-          .lower-message__content
-            メッセージ
+        = link_to 'Edit', edit_group_path(@group), class: "right-header__button"
+    -# .messages
+    -#   .message
+    -#     .upper-message
+    -#       .upper-message__user-name
+    -#         メンバー
+    -#       .upper-message__date
+    -#         2017/04/04
+    -#     .lower-meesage
+    -#       .lower-message__content
+    -#         メッセージ
+    -#   .message
+    -#     .upper-message
+    -#       .upper-message__user-name
+    -#         メンバー
+    -#       .upper-message__date
+    -#         2017/04/04
+    -#     .lower-meesage
+    -#       .lower-message__content
+    -#         メッセージ
+    -#   .message
+    -#     .upper-message
+    -#       .upper-message__user-name
+    -#         メンバー
+    -#       .upper-message__date
+    -#         2017/04/04
+    -#     .lower-meesage
+    -#       .lower-message__content
+    -#         メッセージ
     .messages
       = render @messages
     .form
