--- a/app/assets/stylesheets/modules/side_bar.scss
+++ b/app/assets/stylesheets/modules/side_bar.scss
@@ -7,6 +7,7 @@
     height: 100px;
     line-height: 100px;
     padding: 0 20px;
+    clear: both;
     &__name {
       display: inline-block;
       font-size: $side_header_font;
@@ -14,6 +15,7 @@
     }
     &__lists {
       display: inline-block;
+      // float: right;
       .list {
         display: inline-block;
       }
@@ -32,9 +34,11 @@
       box-sizing: border-box;
       padding: 20px 0 40px;
       &__name {
+        color: $white;
         font-size: $side_group_name;
       }
       &__message {
+        color: $white;
         font-size: $side_group_message;
         margin-top: 5px;
       }
